<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_margin="10dp"
    android:elevation="20dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/minty_green2"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/newsImage"
                android:layout_width="158dp"
                android:layout_height="0dp"
                android:padding="6dp"
                android:background="@drawable/news_dummy_image"
                android:contentDescription="@string/news_img"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize5Percent" />


            <LinearLayout
                android:layout_width="224dp"
                android:layout_height="137dp"
                android:orientation="vertical"
                app:flow_verticalAlign="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shareNews"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/newsImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511">

                <TextView
                    android:id="@+id/newsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/desc"
                    app:layout_constraintEnd_toStartOf="@+id/shareNews"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/newsImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@string/description"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/author"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/newsImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/author"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/newsImage" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/shareNews"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                android:background="@color/yellow"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.076" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:text="@string/source"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/publishDate"
                app:layout_constraintHorizontal_bias="0.022"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/publishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:text="@string/published_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black"
            android:translationY="5dp">

        </View>
    </LinearLayout>
</androidx.cardview.widget.CardView>